--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,8 +3,14 @@
 
 :root {
     --primary: #ffa94d;
+
+    //Default Layout
+    --default-layout-header-height: 60px;
+    --default-layout-header-width: 1150px;
 }
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 html {
