--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -7,5 +7,79 @@
 .inner {
     height: 100%;
     width: var(--default-layout-header-width);
-    background-color: aqua;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo {
+    display: flex;
+    align-items: center;
+}
+.search {
+    position: relative;
+    display: flex;
+    width: 361px;
+    height: 46px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 92px;
+    padding-left: 16px;
+    border: 1.5px solid transparent;
+
+    input {
+        font-size: 1.6rem;
+        color: var(--black);
+        border-color: transparent;
+        background-color: transparent;
+        outline: none;
+        height: 100%;
+        flex: 1;
+        caret-color: aqua;
+    }
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: var(--black);
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        height: 28px;
+        width: 1px;
+        background-color: rgba(22, 24, 35, 0.5);
+        right: 52px;
+        top: 9px;
+    }
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.3);
+    }
+}
+.clear {
+}
+.loading,
+.clear {
+    position: absolute;
+    right: 52px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.2);
+    margin-right: 8px;
+}
+
+.search-btn {
+    width: 52px;
+    height: 100%;
+    border-color: transparent;
+    outline: none;
+    background-color: transparent;
+    border-top-right-radius: 92px;
+    border-bottom-right-radius: 92px;
+    font-size: 1.8rem;
+    color: rgba(22, 24, 35, 0.24);
+    &:active {
+        background-color: rgba(22, 24, 35, 0.5);
+    }
+}
+.search-btn:hover {
+    font-size: 2rem;
+    background-color: rgba(22, 24, 35, 0.06);
+    cursor: pointer;
 }
