--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,21 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
-    --primary: #ffa94d;
-
+    --primary: #fe2c55;
     --black: #000;
-
+    --white: #fff;
     --text-color: #333;
 
-    //Default Layout
+    // Default layout
     --default-layout-header-height: 60px;
-    --default-layout-header-width: 1150px;
+    --default-layout-width: 1150px;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
     font-size: 62.5%;
 }
@@ -26,14 +27,16 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+    color: var(--text-color);
 }
 
 button,
 input,
 [tabindex] {
     outline: none;
-    border: transparent;
+    border: none;
 }
+
 a[href] {
     color: var(--text-color);
     text-decoration: none;
