--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,85 +1,103 @@
 .wrapper {
-    height: var(--default-layout-header-height);
-    box-shadow: 0px 1px 1px rgb(0 0 0 /12%);
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width: 52px;
+
+    width: 100%;
+    height: var(--default-layout-header-height, 60px);
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
 }
+
 .inner {
     height: 100%;
-    width: var(--default-layout-header-width);
+    width: var(--default-layout-width);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.logo {
-    display: flex;
-    align-items: center;
+
+.search,
+.search-result {
+    width: 361px;
 }
+
 .search {
     position: relative;
-    display: flex;
-    width: 361px;
-    height: 46px;
-    background-color: rgba(22, 24, 35, 0.06);
-    border-radius: 92px;
+    height: var(--search-height);
     padding-left: 16px;
+    display: flex;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
     border: 1.5px solid transparent;
 
     input {
-        font-size: 1.6rem;
-        color: var(--black);
-        border-color: transparent;
-        background-color: transparent;
-        outline: none;
-        height: 100%;
         flex: 1;
-        caret-color: aqua;
-    }
-    input:not(:placeholder-shown) ~ .search-btn {
+        height: 100%;
         color: var(--black);
+        font-size: 1.6rem;
+        caret-color: var(--primary);
+        background-color: transparent;
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgba(22, 24, 35, 0.75);
     }
 
     &::after {
         content: '';
         position: absolute;
-        height: 28px;
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
         width: 1px;
-        background-color: rgba(22, 24, 35, 0.5);
-        right: 52px;
-        top: 9px;
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        background-color: rgba(22, 24, 35, 0.12);
     }
+
     &:focus-within {
-        border-color: rgba(22, 24, 35, 0.3);
+        border-color: rgba(22, 24, 35, 0.2);
     }
 }
-.clear {
+
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
 }
-.loading,
-.clear {
+
+.clear,
+.loading {
     position: absolute;
-    right: 52px;
+    right: calc(var(--search-button-width) + 16px);
     top: 50%;
     transform: translateY(-50%);
-    color: rgba(22, 24, 35, 0.2);
-    margin-right: 8px;
+    color: rgba(22, 24, 35, 0.34);
 }
 
 .search-btn {
-    width: 52px;
+    width: var(--search-button-width);
     height: 100%;
-    border-color: transparent;
-    outline: none;
-    background-color: transparent;
-    border-top-right-radius: 92px;
-    border-bottom-right-radius: 92px;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
     font-size: 1.8rem;
-    color: rgba(22, 24, 35, 0.24);
+    color: rgba(22, 24, 35, 0.34);
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+
     &:active {
-        background-color: rgba(22, 24, 35, 0.5);
+        background-color: rgba(22, 24, 35, 0.06);
     }
 }
-.search-btn:hover {
-    font-size: 2rem;
-    background-color: rgba(22, 24, 35, 0.06);
-    cursor: pointer;
+
+.more-btn {
+    font-size: 1.6rem;
+    margin-left: 28px;
+    background-color: transparent;
+    padding: 8px;
 }
