Header user add

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -41,3 +41,13 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
+//Custom tippy tooltip
+body {
+    .tippy-box {
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-arrow {
+    }
+    .tippy-content {
+    }
+}
