--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -94,10 +94,30 @@
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
-
+//actions
 .more-btn {
     font-size: 1.6rem;
     margin-left: 28px;
     background-color: transparent;
     padding: 8px;
+}
+
+.actions {
+    display: flex;
+    align-items: center;
+}
+.action-icon {
+    font-size: 2.6rem;
+    background-color: transparent;
+    color: #a1a4b8;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 12px;
+    cursor: pointer;
 }
