--- a/src/pages/Home/SliderCategories/Slider.module.scss
+++ b/src/pages/Home/SliderCategories/Slider.module.scss
@@ -1,39 +1,12 @@
-.mySwiper {
-    padding: 20px;
-    background-color: #f9f9f9;
+.wrapper {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+.img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
     border-radius: 8px;
-
-    // Customize pagination bullets
-    .swiper-pagination-bullet {
-        background: #ccc;
-        opacity: 1;
-        transition: all 0.3s;
-
-        &-active {
-            background: #007bff;
-        }
-    }
-}
-
-.mySwiper-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-    background-color: #ffffff;
-    border: 1px solid #e0e0e0;
-    border-radius: 6px;
-    font-size: 18px;
-    font-weight: 500;
-    color: #333;
-    transition: box-shadow 0.3s ease;
-
-    &:hover {
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-}
-.image-slider-item {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
 }
