--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,7 +7,6 @@
     border-radius: 4px;
     font-size: 1.6rem;
     font-weight: 700;
-    font-family: var(--font-family);
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
@@ -27,13 +26,11 @@
 .title + .icon {
     margin-left: 8px;
 }
-
 .icon {
     display: inline-block;
-    width: 24px;
+    width: 20px;
     text-align: center;
 }
-
 // Button types
 .rounded {
     border-radius: 999px;
@@ -72,6 +69,8 @@
         text-decoration: underline;
     }
 }
+
+// Disabled
 
 // Button sizes
 .small {
