--- a/src/pages/MyProfile/ProfileItem/MySavePosts/MySavePosts.module.scss
+++ b/src/pages/MyProfile/ProfileItem/MySavePosts/MySavePosts.module.scss
@@ -1,3 +1,10 @@
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+}
+
 .user-save-posts {
     padding: 10px; /* Th?m m?t ch?t kh?ng gian */
     max-width: 1200px;
