--- a/src/pages/UserProfile/UserProfile.module.scss
+++ b/src/pages/UserProfile/UserProfile.module.scss
@@ -1,3 +1,10 @@
+.wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 20px;
+}
+
 .profile-container {
     max-width: 800px;
     margin: 40px auto;
